[tool.poetry]
name = "tasty"
version = "0.1.0a0"
description = "Provides an SDK for building up semantic metadata models using a templating framework."
authors = ["corymosiman12 <cory.mosiman12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3.1"
rdflib = "^5.0.0"
importlib-metadata = {version = "^2.0", python = "<3.8"}
jsonschema = "^3.2.0"
requests = "^2.24.0"
frozendict = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.8.2"
tox = "^3.20.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
