[tool.poetry]
name = "tasty"
version = "0.1.0a0"
description = "Provides an SDK for building up semantic metadata models using a templating framework."
authors = ["corymosiman12 <cory.mosiman12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
PyYAML = "^5.3.1"
rdflib = "^5.0.0"
importlib-metadata = {version = "^2.0", python = "<3.8"}
jsonschema = "^3.2.0"
requests = "^2.24.0"
frozendict = "^1.2"
pyshacl = "^0.14.2"
pandas = "^1.2.3"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.8.2"
jupyter = "^1.0.0"
jupyterlab = "^3.0.11"

[tool.poetry.scripts]
tasty = 'tasty.console:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
